--- a/templates/login.html
+++ b/templates/login.html
@@ -78,12 +78,12 @@
                             <div class="connectwith">
                                 <p>Connect With</p>
                                 <div class="button-login">
-                                    <div class="button-tickfb">
+                                    <div class="button-tickfb" ng-click="facebooklogin();">
                                         <div class="centertick">
                                             <i class="float-left">&nbsp;&nbsp;&nbsp;</i>
                                         </div>
                                         <div class="button-side">
-                                            <button class="button icon-left ion-social-facebook button-fb" ng-click="facebooklogin();">Facebook</button>
+                                            <button class="button icon-left ion-social-facebook button-fb">Facebook</button>
                                         </div>
                                     </div>
                                     <div class="button-ticktwit">
