--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -65,21 +65,43 @@
         </div>
         <div class="row center-main">
             <div class="col">
-                <a href="#/app/fbpost">
-                    <button class="button button-small button-positive history">
+                <a ng-click="changetab('newpost')">
+                    <button class="button button-small button-positive history" ng-class="newpostclass">
                         New Post
                     </button>
                 </a>
             </div>
             <div class="col">
-                <a href="#">
-                    <button class="button button-small button-positive history activated">
+                <a ng-click="changetab('history')">
+                    <button class="button button-small button-positive history" ng-class="historyclass">
                         History
                     </button>
                 </a>
             </div>
         </div>
-        <div class="table-cont">
+        
+<!--        FACEBOOK POST SLIDER   TAB NEW POST-->
+        
+        <div class="box-slider" ng-show="tab=='newpost'">
+            <div class="box">
+                <div class="box-infofb">
+                    <div class="fbpost">
+                        <img src="{{facebookpost.image='' | imagepath}}" alt="">
+                    </div>
+                    <div class="postinfofb">
+                        <h5>{{facebookpost.text}}.</h5>
+                    </div>
+                </div>
+            </div>
+            <div class="previous1">
+                <img src="img/arrowleft.png" class="next" ng-click="prevoiuspost()">
+                <img src="img/arrowright.png" class="prevoius" ng-click="nextpost()">
+            </div>
+        </div>
+        
+<!--        FACEBOOK TABLE   TAB HISTORY-->
+       
+        <div class="table-cont" ng-show="tab=='history'">
             <div class="row" ng-repeat="post in facebook.posts">
                 <div class="col">
                     <div class="tlb-item">
