--- a/templates/login.html
+++ b/templates/login.html
@@ -32,7 +32,7 @@
                     </div>
                 </ion-slide>
                 <ion-slide>
-                    <div class="item-login">
+                    <div class="item-login" ng-show="logindiv">
                         <div class="login-down">
                             <div class="loginstep">
                                 <p>Step 1 of 2</p>
@@ -62,9 +62,7 @@
                             </div>
                         </div>
                     </div>
-                </ion-slide>
-                <ion-slide>
-                    <div class="item-login">
+                    <div class="item-login" ng-show="facebooktwitter">
                         <div class="login-down">
                             <div class="loginstep">
                                 <p>Step 2 of 2</p>
@@ -79,7 +77,7 @@
                                 <p>Connect With</p>
                                 <div class="button-login">
                                     <div class="button-tickfb" ng-click="facebooklogin();">
-                                        <div class="centertick">
+                                        <div class="centertick" ng-show="facebooktik">
                                             <i class="float-left">&nbsp;&nbsp;&nbsp;</i>
                                         </div>
                                         <div class="button-side">
@@ -87,7 +85,7 @@
                                         </div>
                                     </div>
                                     <div class="button-ticktwit">
-                                        <div class="centertick">
+                                        <div class="centertick" ng-show="twittertik">
                                             <i class="float-left">&nbsp;&nbsp;&nbsp;</i>
                                         </div>
                                         <button class="button icon-left ion-social-twitter button-twit">Twitter</button>
