--- a/templates/login.html
+++ b/templates/login.html
@@ -5,7 +5,7 @@
         </div>
         <div class="button-stnd">
             <div class="button-tickfb">
-                <a href="#/welcome">
+                <a  ng-click="changetoinformation();">
                     <button class="button button-small button-light bgtrans">
                         Information
                     </button>
