--- a/templates/login.html
+++ b/templates/login.html
@@ -84,7 +84,7 @@
                                             <button class="button icon-left ion-social-facebook button-fb">Facebook</button>
                                         </div>
                                     </div>
-                                    <div class="button-ticktwit">
+                                    <div class="button-ticktwit" ng-click="twitterlogin();">
                                         <div class="centertick" ng-show="twittertik">
                                             <i class="float-left">&nbsp;&nbsp;&nbsp;</i>
                                         </div>
