--- a/templates/fbpost.html
+++ b/templates/fbpost.html
@@ -9,7 +9,7 @@
         <ion-nav-buttons side="right">
             <a class="button button-icon button-clear ion-edit post-icon blue brf" href="#/app/suggestpost">
             </a>
-            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf">
+            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf" href="#/search">
             </a>
         </ion-nav-buttons>
     </ion-nav-bar>
@@ -22,7 +22,7 @@
         <div class="tables">
             <div class="row">
                 <div class="col">
-                    <a href="#/app/tablefb">
+                    <a href="#">
                         <div class="tbl-items">
                             <h5 class="tot-title">      
                              Action Done
@@ -35,7 +35,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a href="#">
+                    <a href="#/app/fbpost">
                         <div class="tbl-items">
                             <h5 class="tot-title">  
                     Actions Remaining
@@ -48,7 +48,7 @@
                     </a>
                 </div>
                 <div class="col">
-                    <a href="#/app/tablefb">
+                    <a href="#">
                         <div class="tbl-items">
                             <h5 class="tot-title">  
                     Total Reach
@@ -65,35 +65,152 @@
         </div>
         <div class="row center-main">
             <div class="col">
-                <a href="#">
-                    <button class="button button-small button-positive history activated">
+                <a class="button button-small button-positive history" href="#/app/fbpost">
                         New Post
-                    </button>
                 </a>
             </div>
             <div class="col">
-                <a href="#/app/tablefb">
-                    <button class="button button-small button-positive history">
+                <a class="button button-small button-positive history activated" href="#">
                         History
-                    </button>
                 </a>
             </div>
         </div>
-        <div class="box-slider">
-            <div class="box">
-                <div class="box-infofb">
-                    <div class="fbpost">
-                        <img src="img/dellpost.png" alt="">
+        <div class="table-cont">
+            <a href="#/app/postinfofb">
+                <div class="row">
+                    <div class="col">
+                        <div class="tlb-item">
+                            <h5>
+                            My Dell Rewards
+                        </h5>
+                        </div>
                     </div>
-                    <div class="postinfofb">
-                        <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <img src="img/dellpost.png">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            2015-01-12
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <p> Likes:2</p>
+                            <p>Comments:0</p>
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="previous1">
-                <img src="img/arrowleft.png" class="next">
-                <img src="img/arrowright.png" class="prevoius">
-            </div>
+            </a>
+            <a href="#/app/postinfofb">
+                <div class="row">
+                    <div class="col">
+                        <div class="tlb-item">
+                            <h5>
+                            My Dell Rewards
+                        </h5>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <img src="img/dellpost.png">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            2015-01-12
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <p> Likes:2</p>
+                            <p>Comments:0</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="#/app/postinfofb">
+                <div class="row">
+                    <div class="col">
+                        <div class="tlb-item">
+                            <h5>
+                            My Dell Rewards
+                        </h5>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <img src="img/dellpost.png">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            2015-01-12
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <p> Likes:2</p>
+                            <p>Comments:0</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="#/app/postinfofb">
+                <div class="row">
+                    <div class="col">
+                        <div class="tlb-item">
+                            <h5>
+                            My Dell Rewards
+                        </h5>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <img src="img/dellpost.png">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            2015-01-12
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <p> Likes:2</p>
+                            <p>Comments:0</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
+            <a href="#/app/postinfofb">
+                <div class="row">
+                    <div class="col">
+                        <div class="tlb-item">
+                            <h5>
+                            My Dell Rewards
+                        </h5>
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <img src="img/dellpost.png">
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            2015-01-12
+                        </div>
+                    </div>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <p> Likes:2</p>
+                            <p>Comments:0</p>
+                        </div>
+                    </div>
+                </div>
+            </a>
         </div>
     </ion-content>
 </ion-view>
