--- a/templates/login.html
+++ b/templates/login.html
@@ -5,16 +5,14 @@
         </div>
         <div class="button-stnd">
             <div class="button-tickfb">
-                <a  ng-click="changetoinformation();">
-                    <button class="button button-small button-light bgtrans">
+                <a class="button button-small button-light bgtrans" ng-click="changetoinformation();">
                         Information
-                    </button>
                 </a>
             </div>
             <div class="button-ticktwit">
-                <button class="button button-small button-light bgtrans" ng-click="changetologin();">
+                <a class="button button-small button-light bgtrans" ng-click="changetologin();">
                     Login
-                </button>
+                </a>
             </div>
         </div>
         <!--                   box slider-->
@@ -96,7 +94,6 @@
                     </div>
                 </ion-slide>
             </ion-slide-box>
-
         </div>
         <!--                   box slider-->
     </ion-content>
