--- a/templates/menu.html
+++ b/templates/menu.html
@@ -66,8 +66,10 @@
                     <div class="head-text">Leader Board</div>
                 </ion-item>
                 <ion-item nav-clear menu-close class="menumain" ng-click="logoutapp()">
-                    <span class="ion-logout tac" title="leaderboard" aria-hidden="true"></span>
-                    <div class="head-text">Logout</div>
+                    <div class="logout">
+                        <span class="ion-log-out tac" title="logout" aria-hidden="true"></span>
+                        <div class="head-text">Logout</div>
+                    </div>
                 </ion-item>
             </ion-list>
         </ion-content>
