--- a/templates/model.html
+++ b/templates/model.html
@@ -7,12 +7,19 @@
         </div>
         <div class="modal-cont">
             <div class="cont-modal">
-                <h4>I am Dell Compassador!</h4> Join me in my journey of learning and help me land my first intership.
-            </div>
-            <div class="modal-button">
-                <a href=" #/app/home">
-                    <button class="button button-assertive" type="submit" href=" #/app/home">post now</button>
+                <h4>I am Dell Compassador!</h4>
+                <label class="item item-input">
+                    <form method="post" action="">
+                        <textarea name="comments" cols="75" rows="5">
+                            Join me in my journey of learning and help me land my first intership.
+                        </textarea>
+                        <br>
+                        <div class="modal-button">
+                            <a class="button button-assertive" type="submit" href=" #/app/fbpost">post now
                 </a>
+                        </div>
+                    </form>
+                </label>
             </div>
         </div>
     </ion-content>
