--- a/templates/twitterpost.html
+++ b/templates/twitterpost.html
@@ -9,7 +9,7 @@
         <ion-nav-buttons side="right">
             <a class="button button-icon button-clear ion-edit post-icon blue brf" href="#/app/suggestpost">
             </a>
-            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf">
+            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf" href="#/search">
             </a>
         </ion-nav-buttons>
     </ion-nav-bar>
@@ -63,16 +63,14 @@
         </div>
         <div class="row center-main">
             <div class="col">
-                <button class="button button-small button-positive history activated">
+                <a class="button button-small button-positive history activated">
                     New Post
-                </button>
+                </a>
             </div>
             <div class="col">
-                <a href="#/app/table">
-                    <button class="button button-small button-positive history">
+                <a class="button button-small button-positive history" href="#/app/table">
                         History
-                    </button>
-                </a>
+                    </a>
             </div>
         </div>
         <div class="box-slider">
