--- a/templates/welcome.html
+++ b/templates/welcome.html
@@ -5,27 +5,23 @@
         </div>
         <div class="wel-content">
             <div class="headwelcome">
-                <h5>Lorem Ipsum Lorem Ipsum</h5>
-                <h5>Lorem Ipsum Lorem Ipsum</h5>
+                <h5>I am Dell Compassador!</h5>
             </div>
             <div class="welcm-share">
                 <p>Share on</p>
-                <a href="#"> <span class="ion-social-facebook"></span>
+                <a href="#/app/fbpost"> <span class="ion-social-facebook"></span>
                 </a>
-                <a href="#"> <span class="ion-social-twitter"></span>
+                <a href="#/app/twitterpost"> <span class="ion-social-twitter"></span>
                 </a>
             </div>
             <div class="welcm-btn">
-                <button class="button button-small" ng-click="openedit()">
+                <a class="button button-small" ng-click="openedit()">
                     Edit
-                </button>
-                <button class="button button-small">
+                </a>
+                <a class="button button-small" href="#/app/home">
                     Use later
-                </button>
+                </a>
             </div>
         </div>
-
-
-
     </ion-content>
 </ion-view>
