--- a/templates/postinfo.html
+++ b/templates/postinfo.html
@@ -13,7 +13,7 @@
         <ion-nav-buttons side="right">
             <a class="button button-icon button-clear ion-edit post-icon blue brf" href="#/app/suggestpost">
             </a>
-            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf">
+            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf" href="#/search">
             </a>
         </ion-nav-buttons>
     </ion-nav-bar>
@@ -24,57 +24,21 @@
             <h5>date</h5> 02-02-15 | 13.55.05
         </div>
         <div class="box-slider">
-            <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false" does-continue="true" auto-play="3000">
-                <ion-slide>
-                    <div class="box">
-                        <div class="post-cont">
-                            <div class="card">
-                                <div class="item item-text-wrap">
-                                    <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
-    Link:<a href="">http://bit.ly/myDellrewards</a></h3>
-                                </div>
-                            </div>
-                            <div class="postinfo">
-                                <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
+            <div class="box">
+                <div class="post-cont">
+                    <div class="card">
+                        <div class="item item-text-wrap">
+                            <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
     Link:<a href="">http://bit.ly/myDellrewards</a></h4>
-                            </div>
                         </div>
                     </div>
-                </ion-slide>
-                <ion-slide>
-                    <div class="box">
-                        <div class="post-cont">
-                            <div class="card">
-                                <div class="item item-text-wrap">
-                                    <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
-    Link:<a href="">http://bit.ly/myDellrewards</a></h3>
-                                </div>
-                            </div>
-                            <div class="postinfo">
-                                <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
-    Link:<a href="">http://bit.ly/myDellrewards</a></h4>
-                            </div>
-                        </div>
-                    </div>
-                </ion-slide>
-                <ion-slide>
-                    <div class="box">
-                        <div class="post-cont">
-                            <div class="card">
-                                <div class="item item-text-wrap">
-                                    <h3>Get your voucher code as soon as your reward points on My Dell Rewards.
-    Link:<a href="">http://bit.ly/myDellrewards</a></h3>
-                                </div>
-                            </div>
-                            <div class="postinfo">
-                                <h4>Get your voucher code as soon as your reward points on My Dell Rewards.
-    Link:<a href="">http://bit.ly/myDellrewards</a></h4>
-                            </div>
-
-                        </div>
-                    </div>
-                </ion-slide>
-            </ion-slide-box>
+                    <button class="button icon-left ion-social-twitter button-post">Tweet</button>
+                </div>
+            </div>
+            <div class="previous">
+                <img src="img/arrowleft.png" class="next">
+                <img src="img/arrowright.png" class="prevoius">
+            </div>
         </div>
     </ion-content>
     <ion-footer-bar>
