--- a/templates/postinfofb.html
+++ b/templates/postinfofb.html
@@ -13,7 +13,7 @@
         <ion-nav-buttons side="right">
             <a class="button button-icon button-clear ion-edit post-icon blue brf" href="#/app/suggestpost">
             </a>
-            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf">
+            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf" href="#/search">
             </a>
         </ion-nav-buttons>
     </ion-nav-bar>
@@ -24,40 +24,20 @@
             <h5>date</h5> 02-02-15 | 12.05.05
         </div>
         <div class="box-slider">
-            <ion-slide-box on-slide-changed="slideChanged(index)" show-pager="false" does-continue="true" auto-play="3000">
-                <ion-slide>
-                    <div class="box">
-                        <div class="box-infofb">
-                            <div class="fbpost">
-                                <img src="img/dellpost.png" alt="">
-                            </div>
-                            <div class="postinfofb">
-                                <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
-                            </div>
-                        </div>
+            <div class="box">
+                <div class="box-infofb">
+                    <div class="fbpost">
+                        <img src="img/dellpost.png" alt="">
                     </div>
-                </ion-slide>
-                <ion-slide>
-                    <div class="box">
-                        <div class="fbpost">
-                            <img src="img/dellpost.png" alt="">
-                        </div>
-                        <div class="postinfofb">
-                            <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
-                        </div>
+                    <div class="postinfofb">
+                        <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
                     </div>
-                </ion-slide>
-                <ion-slide>
-                    <div class="box">
-                        <div class="fbpost">
-                            <img src="img/dellpost.png" alt="">
-                        </div>
-                        <div class="postinfofb">
-                            <h5>Get your voucher code as soon as your redeem your reward points on My Dell Rewards.</h5>
-                        </div>
-                    </div>
-                </ion-slide>
-            </ion-slide-box>
+                </div>
+            </div>
+            <div class="previous1">
+                <img src="img/arrowleft.png" class="next">
+                <img src="img/arrowright.png" class="prevoius">
+            </div>
         </div>
     </ion-content>
     <ion-footer-bar>
