--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -20,68 +20,67 @@
             <hr class="verticalup">
         </div>
         <div class="tables">
-            <div class="row">
-                <div class="col">
-                    <a href="#">
-                        <div class="tbl-items">
-                            <h5 class="tot-title">      
+            <a href="#/app/postinfofb">
+                <div class="row">
+                    <div class="col">
+                        <a href="#">
+                            <div class="tbl-items">
+                                <h5 class="tot-title">      
                              Action Done
                              </h5>
-                            <i class="icons ion-ticks"></i>
-                            <h5>  
+                                <i class="icons ion-ticks"></i>
+                                <h5>  
 								{{facebook.stats.actiondone}}
                     </h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="#/app/fbpost">
-                        <div class="tbl-items">
-                            <h5 class="tot-title">  
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="#/app/fbpost">
+                            <div class="tbl-items">
+                                <h5 class="tot-title">  
                     Actions Remaining
                     </h5>
-                            <i class="icons ion-circle"></i>
-                            <h5>  
+                                <i class="icons ion-circle"></i>
+                                <h5>  
                    {{facebook.stats.remaining}}
                     </h5>
-                        </div>
-                    </a>
-                </div>
-                <div class="col">
-                    <a href="#">
-                        <div class="tbl-items">
-                            <h5 class="tot-title">  
+                            </div>
+                        </a>
+                    </div>
+                    <div class="col">
+                        <a href="#">
+                            <div class="tbl-items">
+                                <h5 class="tot-title">  
                     Total Reach
                     </h5>
-                            <i class="icons ion-reach"></i>
-                            <h5>  
+                                <i class="icons ion-reach"></i>
+                                <h5>  
                    {{facebook.stats.totalpost}}
                     </h5>
-                        </div>
-                    </a>
+                            </div>
+                        </a>
+                    </div>
                 </div>
-            </div>
+            </a>
             <hr class="vertical-blue">
         </div>
         <div class="row center-main">
             <div class="col">
-                <a ng-click="changetab('newpost')">
-                    <button class="button button-small button-positive history" ng-class="newpostclass">
+                <a class="button button-small button-positive history" ng-class="newpostclass" ng-click="changetab('newpost')">
                         New Post
-                    </button>
-                </a>
+                    </a>
             </div>
             <div class="col">
-                <a ng-click="changetab('history')">
-                    <button class="button button-small button-positive history" ng-class="historyclass">
+                <a class="button button-small button-positive history" ng-class="historyclass" ng-click="changetab('history')">
                         History
-                    </button>
                 </a>
             </div>
         </div>
-        
-<!--        FACEBOOK POST SLIDER   TAB NEW POST-->
-        
+
+
+        <!--        FACEBOOK POST SLIDER   TAB NEW POST-->
+
         <div class="box-slider" ng-show="tab=='newpost'">
             <div class="box">
                 <div class="box-infofb">
@@ -98,9 +97,9 @@
                 <img src="img/arrowright.png" class="prevoius" ng-click="nextpost()">
             </div>
         </div>
-        
-<!--        FACEBOOK TABLE   TAB HISTORY-->
-       
+
+        <!--        FACEBOOK TABLE   TAB HISTORY-->
+
         <div class="table-cont" ng-show="tab=='history'">
             <div class="row" ng-repeat="post in facebook.posts">
                 <div class="col">
@@ -117,7 +116,7 @@
                 </div>
                 <div class="col">
                     <div class="tlb-item">
-						{{post.timestamp}}
+                        {{post.timestamp}}
                     </div>
                 </div>
                 <div class="col">
