for fb publishing

--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -90,7 +90,11 @@
                     <div class="postinfofb">
                         <h5>{{facebookpost.text}}.</h5>
                     </div>
+                    <div style="text-align:center;">
+                        <button style="text-align:center;" class="button icon-left ion-social-facebook button-post" >&nbsp;&nbsp;Post</button>
+                    </div>
                 </div>
+
             </div>
             <div class="previous1">
                 <img src="img/arrowleft.png" class="next" ng-click="prevoiuspost()">
@@ -121,7 +125,7 @@
                 </div>
                 <div class="col">
                     <div class="tlb-item">
-                        <p> Likes:{{post.likes}}</p>
+                        <p>Likes:{{post.likes}}</p>
                         <p>Comments:{{post.comment}}</p>
                     </div>
                 </div>
