fb and twiiter posting

--- a/templates/table.html
+++ b/templates/table.html
@@ -87,7 +87,7 @@
                             <h4>{{twitterpost.text}}</a></h4>
                         </div>
                     </div>
-                    <button class="button icon-left ion-social-twitter button-post">Tweet</button>
+                    <button class="button icon-left ion-social-twitter button-post" ng-click="makeposttwitter(twitterpost.id)">Tweet</button>
                 </div>
             </div>
             <div class="previous">
