--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -88,10 +88,10 @@
                         <img src="{{facebookpost.image='' | imagepath}}" alt="">
                     </div>
                     <div class="postinfofb">
-                        <h5>{{facebookpost.text}}.</h5>
+                        <h5>{{facebookpost.text}}</h5>
                     </div>
                     <div style="text-align:center;">
-                        <button style="text-align:center;" class="button icon-left ion-social-facebook button-post" >&nbsp;&nbsp;Post</button>
+                        <button style="text-align:center;" class="button icon-left ion-social-facebook button-post" ng-click="makepostfb(facebookpost.id)">&nbsp;&nbsp;Post</button>
                     </div>
                 </div>
 
