--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -66,12 +66,12 @@
             <hr class="vertical-blue">
         </div>
         <div class="row center-main">
-            <div class="col">
+            <div class="col {{newpostclass}}">
                 <a class="button button-small button-positive history" ng-class="newpostclass" ng-click="changetab('newpost')">
                         New Post
                     </a>
             </div>
-            <div class="col">
+            <div class="col {{historyclass}}">
                 <a class="button button-small button-positive history" ng-class="historyclass" ng-click="changetab('history')">
                         History
                 </a>
