--- a/templates/fbpost.html
+++ b/templates/fbpost.html
@@ -9,11 +9,11 @@
         <ion-nav-buttons side="right">
             <a class="button button-icon button-clear ion-edit post-icon blue brf" href="#/app/suggestpost">
             </a>
-            <a class="button button-icon button-clear ion-search menu-btncolor green blue brf" href="#/search">
-            </a>
+            <in <a class="button button-icon button-clear ion-search menu-btncolor green blue brf" href="#/search">
+                </a>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content>
+    <ion-header-bar class="static-header">
         <div class="head-lead">
             <i class="icons ion-social-facebook"></i>
             <h4>Facebook</h4>
@@ -63,6 +63,8 @@
             </div>
             <hr class="vertical-blue">
         </div>
+    </ion-header-bar>
+    <ion-content>
         <div class="row center-main">
             <div class="col">
                 <a class="button button-small button-positive history" href="#/app/fbpost">
