--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -11,90 +11,95 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-search post-icon blue brf">
-            </button>
+            <div class="open-textss" ng-click="opentexts();">
+                <button class="button button-icon button-clear ion-search post-icon blue brf absolutedone">
+                </button>
+                <input type="text" class="text-top" ng-class="textopens">
+            </div>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content class="leader-cont">
-        <div class="leader-contmain">
-            <div class="row">
-                <div class="col col-33">
-                    <div class="lead2">
-                        <img src="{{rankuser[1].image}}" alt="">
-                        <div class="lead12">
-                            <p> #{{rankuser[1].rank}}</p>
-                            <h4> {{rankuser[1].name}} </h4>
-                            <h3>  {{rankuser[1].score}}</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-33">
-                    <div class="lead1">
-                        <img src="{{rankuser[0].image}}" alt="">
-                        <div class="lead11">
-                            <p> #{{rankuser[0].rank}}</p>
-                            <h4> {{rankuser[0].name}} </h4>
-                            <h3>  {{rankuser[0].score}}</h3>
-                        </div>
-                    </div>
-                </div>
-                <div class="col col-33">
-                    <div class="lead3">
-                        <img src="{{rankuser[2].image}}" alt="">
-                        <div class="lead13">
-                            <p> #{{rankuser[2].rank}}</p>
-                            <h4> {{rankuser[2].name}} </h4>
-                            <h3>  {{rankuser[2].score}}</h3>
-                        </div>
+    <ion-header-bar class=" static-header ">
+        <div class="row ">
+            <div class="col col-33 ">
+                <div class="lead2 ">
+                    <img src="{{rankuser[1].image}} " alt=" ">
+                    <div class="lead12 ">
+                        <p> #{{rankuser[1].rank}}</p>
+                        <h4> {{rankuser[1].name}} </h4>
+                        <h3>  {{rankuser[1].score}}</h3>
                     </div>
                 </div>
             </div>
-            <hr class="vertical-blue">
-            <div class="leader-brd">
-                <div class="row" ng-repeat="leader in leaderboard">
-                    <div class="col col-10">
-                        <div class="rank-lead">
+            <div class="col col-33 ">
+                <div class="lead1 ">
+                    <img src="{{rankuser[0].image}} " alt=" ">
+                    <div class="lead11 ">
+                        <p> #{{rankuser[0].rank}}</p>
+                        <h4> {{rankuser[0].name}} </h4>
+                        <h3>  {{rankuser[0].score}}</h3>
+                    </div>
+                </div>
+            </div>
+            <div class="col col-33 ">
+                <div class="lead3 ">
+                    <img src="{{rankuser[2].image}} " alt=" ">
+                    <div class="lead13 ">
+                        <p> #{{rankuser[2].rank}}</p>
+                        <h4> {{rankuser[2].name}} </h4>
+                        <h3>  {{rankuser[2].score}}</h3>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </ion-header-bar>
+    <hr class="vertical-blue ">
+    <ion-content class="leader-cont ">
+        <div class="leader-contmain ">
+            <div class="leader-brd ">
+                <div class="row " ng-repeat="leader in leaderboard ">
+                    <div class="col col-10 ">
+                        <div class="rank-lead ">
                             #{{leader.rank}}
                         </div>
                     </div>
-                    <div class="col col-20">
-                        <div class="pic-lead">
-                            <img src="{{leader.image}}" alt="">
+                    <div class="col col-20 ">
+                        <div class="pic-lead ">
+                            <img src="{{leader.image}} " alt=" ">
                         </div>
                     </div>
-                    <div class="col col-50">
-                        <div class="social-lead">
-                            <h4 class="name">{{leader.name}}</h4>
-                            <span class="fb-score"><i class="iicon ion-fb1"></i> <span class="lead-score">{{leader.facebook}}</span></span>
-                            <span class="twit-score"><i class="iicon ion-twit"></i> <span class="lead-score">{{leader.twitter}}</span></span>
+                    <div class="col col-50 ">
+                        <div class="social-lead ">
+                            <h4 class="name ">{{leader.name}}</h4>
+                            <span class="fb-score "><i class="iicon ion-fb1 "></i> <span class="lead-score ">{{leader.facebook}}</span></span>
+                            <span class="twit-score "><i class="iicon ion-twit "></i> <span class="lead-score ">{{leader.twitter}}</span></span>
                         </div>
                     </div>
-                    <div class="col col-20">
-                        <div class="score-lead">
-							{{leader.score}}
+                    <div class="col col-20 ">
+                        <div class="score-lead ">
+                            {{leader.score}}
                         </div>
                     </div>
                 </div>
-                <ion-infinite-scroll icon="ion-loading-c" on-infinite="loadMore()"></ion-infinite-scroll>
+                <ion-infinite-scroll icon="ion-loading-c " on-infinite="loadMore() "></ion-infinite-scroll>
             </div>
         </div>
     </ion-content>
     <ion-footer-bar>
-        <div class="bar bar-footer">
-            <div class="row like-comnt leader" id="like-comnts">
-                <div class="col col-33 bod-right">
+        <div class="bar bar-footer ">
+            <div class="row like-comnt leader " id="like-comnts ">
+                <div class="col col-33 bod-right ">
                     <h5>
                  #{{user.rank}}
                 </h5>
                 </div>
-                <div class="col col-33 bod-right">
+                <div class="col col-33 bod-right ">
                     <h5>
 						{{user.name}}
                 </h5>
                 </div>
-                <div class="col col-33 bod-right">
-                    <h5 class="score-tot">
-                        <i class="icon-star icon-str"></i>
+                <div class="col col-33 bod-right ">
+                    <h5 class="score-tot ">
+                        <i class="icon-star icon-str "></i>
                 {{user.score}}
                 </h5>
                 </div>
