--- a/templates/suggestpost.html
+++ b/templates/suggestpost.html
@@ -11,7 +11,7 @@
             <hr class="verticalup">
         </div>
         <ion-nav-buttons side="right">
-            <button class="button button-icon button-clear ion-close post-icon blue brf">
+            <button class="button button-icon button-clear ion-close post-icon blue brf" ng-click="myGoBack()">
             </button>
         </ion-nav-buttons>
     </ion-nav-bar>
