--- a/css/style.css
+++ b/css/style.css
@@ -2141,10 +2141,6 @@ a.button.button-small.button-positive.history.activated {
     padding: 20px 0;
 }
 
-button.button.button-icon.button-clear.ion-close.post-icon.blue {
-    padding: 0;
-}
-
 button.button.icon-left.ion-social-twitter.button-post:hover {
     background: #2F87CD;
     border: #2F87CD;
@@ -2339,4 +2335,53 @@ ion-header-bar.static-header {
     position: absolute;
     top: 0px;
     right: 10px;
+}
+
+.static-table {
+    position: absolute;
+    width: 100%;
+    top: 87px;
+    left: 0px;
+}
+
+.static-main {
+    position: absolute;
+    top: 255px;
+}
+
+.head-lead-static {
+    text-align: center;
+    font-size: 16px;
+    text-transform: uppercase;
+    color: #0f88c5;
+    padding-top: 14px;
+    background: transparent;
+    width: 100%;
+    position: absolute;
+}
+
+hr.vertical-blue-satatic {
+    width: 70%;
+    height: 1px;
+    border: 0;
+    background: rgba(15, 136, 197, 0.6);
+    position: absolute;
+    top: 138px;
+    z-index: 9999999999999;
+    -webkit-transform: translateX(-50%);
+    -moz-transform: translateX(-50%);
+    -ms-transform: translateX(-50%);
+    -o-transform: translateX(-50%);
+    transform: translateX(-50%);
+    left: 50%;
+}
+
+ion-header-bar.static-header-main {
+    top: 0px;
+    border: 0px;
+    background: transparent;
+}
+
+.tablefb-cont {
+    padding-top: 270px;
 }
