--- a/templates/table.html
+++ b/templates/table.html
@@ -13,7 +13,73 @@
             </a>
         </ion-nav-buttons>
     </ion-nav-bar>
+    <ion-header-bar class="static-header-main">
+        <div class="head-lead-static head-lead ">
+            <i class="icons ion-social-twitter"></i>
+            <h4>Twitter</h4>
+            <hr class="verticalup">
+        </div>
+        <div class="tables static-table">
+            <div class="row">
+                <div class="col">
+                    <a href="#">
+                        <div class="tbl-items">
+                            <h5 class="tot-title">      
+                             Action Done
+                             </h5>
+                            <i class="icons ion-ticks"></i>
+                            <h5>  
+								{{twitter.stats.actiondone}}
+                    </h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="#/app/twitterpost">
+                        <div class="tbl-items">
+                            <h5 class="tot-title">  
+                    Actions Remaining
+                    </h5>
+                            <i class="icons ion-circle"></i>
+                            <h5>  
+								{{twitter.stats.remaining}}
+                    </h5>
+                        </div>
+                    </a>
+                </div>
+                <div class="col">
+                    <a href="#">
+                        <div class="tbl-items">
+                            <h5 class="tot-title">  
+                    Total Reach
+                    </h5>
+                            <i class="icons ion-reach"></i>
+                            <h5>  
+								{{twitter.stats.totalpost}}
+                    </h5>
+                        </div>
+                    </a>
+                </div>
+            </div>
+            <hr class="vertical-blue-satatic">
+        </div>
+        </div>
+        <div class="row center-main static-main">
+            <div class="col {{newpostclass}}">
+
+                <a class="button button-small button-positive history {{newpostclass}}" ng-click="changetab('newpost')">
+                        New Post
+                </a>
+            </div>
+            <div class="col {{historyclass}}">
+                <a class="button button-small button-positive history {{historyclass}}" ng-click="changetab('history')">
+                        History
+                    </a>
+            </div>
+        </div>
+    </ion-header-bar>
     <ion-content>
+        <!--
         <div class="header-fixed">
             <div class="head-lead">
                 <i class="icons ion-social-twitter"></i>
@@ -67,7 +133,7 @@
         </div>
         <div class="row center-main">
             <div class="col {{newpostclass}}">
-            
+
                 <a class="button button-small button-positive history {{newpostclass}}" ng-click="changetab('newpost')">
                         New Post
                 </a>
@@ -78,53 +144,53 @@
                     </a>
             </div>
         </div>
-
-
-        <div class="box-slider" ng-show="tab=='newpost'">
-            <div class="box">
-                <div class="post-cont">
-                    <div class="card">
-                        <div class="item item-text-wrap">
-                            <h4>{{twitterpost.text}}</a></h4>
+-->
+        <div class="tablefb-cont">
+            <div class="box-slider" ng-show="tab=='newpost'">
+                <div class="box">
+                    <div class="post-cont">
+                        <div class="card">
+                            <div class="item item-text-wrap">
+                                <h4>{{twitterpost.text}}</a></h4>
+                            </div>
                         </div>
+                        <button class="button icon-left ion-social-twitter button-post" ng-click="makeposttwitter(twitterpost.id)">Tweet</button>
                     </div>
-                    <button class="button icon-left ion-social-twitter button-post" ng-click="makeposttwitter(twitterpost.id)">Tweet</button>
+                </div>
+                <div class="previous">
+                    <img src="img/arrowleft.png" class="next" ng-click="prevoiuspost()">
+                    <img src="img/arrowright.png" class="prevoius" ng-click="nextpost()">
                 </div>
             </div>
-            <div class="previous">
-                <img src="img/arrowleft.png" class="next" ng-click="prevoiuspost()">
-                <img src="img/arrowright.png" class="prevoius" ng-click="nextpost()">
-            </div>
-        </div>
-
-        <div class="table-cont" ng-show="tab=='history'">
-            <a href="#/app/postinfo">
-                <div class="row" ng-repeat="posts in twitter.posts">
-                    <div class="col">
-                        <div class="tlb-item">
-                            <h5>
+            <div class="table-cont" ng-show="tab=='history'">
+                <a href="#/app/postinfo">
+                    <div class="row" ng-repeat="posts in twitter.posts">
+                        <div class="col">
+                            <div class="tlb-item">
+                                <h5>
                             {{posts.posttext | cut:true:20:' ...'}}
                         </h5>
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="tlb-item">
+                                -
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="tlb-item">
+                                {{posts.timestamp}}
+                            </div>
+                        </div>
+                        <div class="col">
+                            <div class="tlb-item">
+                                <p> Retweetes:{{posts.retweet}}</p>
+                                <p>Favourites:{{posts.favourites}}</p>
+                            </div>
                         </div>
                     </div>
-                    <div class="col">
-                        <div class="tlb-item">
-                            -
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="tlb-item">
-                            {{posts.timestamp}}
-                        </div>
-                    </div>
-                    <div class="col">
-                        <div class="tlb-item">
-                            <p> Retweetes:{{posts.retweet}}</p>
-                            <p>Favourites:{{posts.favourites}}</p>
-                        </div>
-                    </div>
-                </div>
-            </a>
+                </a>
+            </div>
         </div>
     </ion-content>
 </ion-view>
