--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -13,13 +13,13 @@
             </a>
         </ion-nav-buttons>
     </ion-nav-bar>
-    <ion-content>
-        <div class="head-lead">
+    <ion-header-bar class="static-header-main">
+        <div class="head-lead-static head-lead ">
             <i class="icons ion-social-facebook"></i>
             <h4>Facebook</h4>
             <hr class="verticalup">
         </div>
-        <div class="tables">
+        <div class="tables static-table">
             <a href="#/app/postinfofb">
                 <div class="row">
                     <div class="col">
@@ -63,9 +63,9 @@
                     </div>
                 </div>
             </a>
-            <hr class="vertical-blue">
+            <hr class="vertical-blue-satatic">
         </div>
-        <div class="row center-main">
+        <div class="row center-main static-main">
             <div class="col {{newpostclass}}">
                 <a class="button button-small button-positive history" ng-class="newpostclass" ng-click="changetab('newpost')">
                         New Post
@@ -77,56 +77,74 @@
                 </a>
             </div>
         </div>
-
-
-        <!--        FACEBOOK POST SLIDER   TAB NEW POST-->
-
-        <div class="box-slider" ng-show="tab=='newpost'">
-            <div class="box">
-                <div class="box-infofb">
-                    <div class="fbpost">
-                        <img src="{{facebookpost.image='' | imagepath}}" alt="">
-                    </div>
-                    <div class="postinfofb">
-                        <h5>{{facebookpost.text}}</h5>
-                    </div>
-                    <div style="text-align:center;">
-                        <button style="text-align:center;" class="button icon-left ion-social-facebook button-post" ng-click="makepostfb(facebookpost.id)">&nbsp;&nbsp;Post</button>
-                    </div>
+    </ion-header-bar>
+    <ion-content>
+        <div class="tablefb-cont">
+            <!--
+            <div class="row center-main">
+                <div class="col {{newpostclass}}">
+                    <a class="button button-small button-positive history" ng-class="newpostclass" ng-click="changetab('newpost')">
+                        New Post
+                    </a>
                 </div>
-
+                <div class="col {{historyclass}}">
+                    <a class="button button-small button-positive history" ng-class="historyclass" ng-click="changetab('history')">
+                        History
+                </a>
+                </div>
             </div>
-            <div class="previous1">
-                <img src="img/arrowleft.png" class="next" ng-click="prevoiuspost()">
-                <img src="img/arrowright.png" class="prevoius" ng-click="nextpost()">
+-->
+
+
+            <!--        FACEBOOK POST SLIDER   TAB NEW POST-->
+
+            <div class="box-slider" ng-show="tab=='newpost'">
+                <div class="box">
+                    <div class="box-infofb">
+                        <div class="fbpost">
+                            <img src="{{facebookpost.image='' | imagepath}}" alt="">
+                        </div>
+                        <div class="postinfofb">
+                            <h5>{{facebookpost.text}}</h5>
+                        </div>
+                        <div style="text-align:center;">
+                            <button style="text-align:center;" class="button icon-left ion-social-facebook button-post" ng-click="makepostfb(facebookpost.id)">&nbsp;&nbsp;Post</button>
+                        </div>
+                    </div>
+
+                </div>
+                <div class="previous1">
+                    <img src="img/arrowleft.png" class="next" ng-click="prevoiuspost()">
+                    <img src="img/arrowright.png" class="prevoius" ng-click="nextpost()">
+                </div>
             </div>
-        </div>
 
-        <!--        FACEBOOK TABLE   TAB HISTORY-->
+            <!--        FACEBOOK TABLE   TAB HISTORY-->
 
-        <div class="table-cont" ng-show="tab=='history'">
-            <div class="row" ng-repeat="post in facebook.posts">
-                <div class="col">
-                    <div class="tlb-item">
-                        <h5>
+            <div class="table-cont" ng-show="tab=='history'">
+                <div class="row" ng-repeat="post in facebook.posts">
+                    <div class="col">
+                        <div class="tlb-item">
+                            <h5>
 							{{post.posttext | cut:true:20:' ...'}}
                         </h5>
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="tlb-item">
-                        <img src="img/dellpost.png">
+                    <div class="col">
+                        <div class="tlb-item">
+                            <img src="img/dellpost.png">
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="tlb-item">
-                        {{post.timestamp}}
+                    <div class="col">
+                        <div class="tlb-item">
+                            {{post.timestamp}}
+                        </div>
                     </div>
-                </div>
-                <div class="col">
-                    <div class="tlb-item">
-                        <p>Likes:{{post.likes}}</p>
-                        <p>Comments:{{post.comment}}</p>
+                    <div class="col">
+                        <div class="tlb-item">
+                            <p>Likes:{{post.likes}}</p>
+                            <p>Comments:{{post.comment}}</p>
+                        </div>
                     </div>
                 </div>
             </div>
