--- a/templates/leaderboard.html
+++ b/templates/leaderboard.html
@@ -53,7 +53,7 @@
         </div>
     </ion-header-bar>
     <hr class="vertical-blue ">
-    <ion-content class="leader-cont ">
+    <ion-content class="leader-cont has-header3">
         <div class="leader-contmain ">
             <div class="leader-brd ">
                 <div class="row " ng-repeat="leader in leaderboard ">
