--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -78,7 +78,7 @@
             </div>
         </div>
     </ion-header-bar>
-    <ion-content>
+    <ion-content class="has-header2">
         <div class="tablefb-cont">
             <!--
             <div class="row center-main">
