--- a/templates/table.html
+++ b/templates/table.html
@@ -78,7 +78,7 @@
             </div>
         </div>
     </ion-header-bar>
-    <ion-content>
+    <ion-content class="has-header2">
         <!--
         <div class="header-fixed">
             <div class="head-lead">
