--- a/templates/menu.html
+++ b/templates/menu.html
@@ -1,6 +1,6 @@
 <ion-side-menus enable-menu-with-back-views="false" ng-controller="MenuCtrl">
-    <ion-side-menu-content>
-        <ion-nav-bar class="">
+    <ion-side-menu-content drag-content="false">
+        <ion-nav-bar>
             <ion-nav-back-button>
             </ion-nav-back-button>
         </ion-nav-bar>
