--- a/templates/table.html
+++ b/templates/table.html
@@ -147,7 +147,7 @@
 -->
         <div class="tablefb-cont">
             <div class="box-slider" ng-show="tab=='newpost'">
-                <div class="box">
+                <div class="box" on-swipe-left="prevoiuspost()" on-swipe-right="nextpost()">
                     <div class="post-cont">
                         <div class="card">
                             <div class="item item-text-wrap">
