--- a/templates/tablefb.html
+++ b/templates/tablefb.html
@@ -80,26 +80,9 @@
     </ion-header-bar>
     <ion-content class="has-header2">
         <div class="tablefb-cont">
-            <!--
-            <div class="row center-main">
-                <div class="col {{newpostclass}}">
-                    <a class="button button-small button-positive history" ng-class="newpostclass" ng-click="changetab('newpost')">
-                        New Post
-                    </a>
-                </div>
-                <div class="col {{historyclass}}">
-                    <a class="button button-small button-positive history" ng-class="historyclass" ng-click="changetab('history')">
-                        History
-                </a>
-                </div>
-            </div>
--->
-
-
             <!--        FACEBOOK POST SLIDER   TAB NEW POST-->
-
             <div class="box-slider" ng-show="tab=='newpost'">
-                <div class="box">
+                <div class="box" on-swipe-left="prevoiuspost()" on-swipe-right="nextpost()">
                     <div class="box-infofb">
                         <div class="fbpost">
                             <img src="{{facebookpost.image='' | imagepath}}" alt="">
